add the selected app

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,19 @@ hs_err_pid*
 *.pdf
 *.ppt
 *.mp4
+
+
+# IntelliJ IDEA
+.idea
+*.iml
+
+# Gradle
+.gradle
+gradlew.bat
+build
+local.properties
+reports
+
+# Mac OS
+.DS_Store
+
